parser/tests/bad/arr06.st
% upper bound of a 'static array' must be greater than its lower bound

var arr: array 1..1 of int
